# UPCY_BE

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  et --hard e556875  manage.py  pyproject.toml  requirements.txt
.config/: UPCY.ini
.config/nginx/: UPCY.conf
.config/uwsgi/: UPCY.ini  uwsgi.service
.github/workflows/: deploy.yml  integration.yml
UpcyProject/: asgi.py  settings.py  urls.py  wsgi.py
UpcyProject/settings/: production.py  settings.py
config/: settings.py  urls.py
config/middleware/: request_logging_middleware.py
config/settings/: production.py  settings.py
core/: exceptions.py  mixins.py  models.py  permissions.py  urls.py  utils.py  views.py
market/: managers.py  mixins.py  models.py  pagination.py  services.py  tests.py  urls.py
market/migrations/: 0001_initial.py  0002_initial.py  0002_remove_market_market_rate.py  0003_alter_servicematerial_table_and_more.py  0003_marketservice_market_uuid.py  0003_service_suspended.py  0003_service_temporary.py  0003_serviceimage_image_size_and_more.py  0004_alter_market_reformer.py  0004_remove_marketservice_market_uuid_and_more.py  0004_remove_service_temporary.py  0004_remove_serviceimage_image_size_and_more.py  (+15 more)
order/: managers.py  mixins.py  models.py  pagination.py  services.py  tests.py  urls.py
products/: admin.py  models.py  selectors.py  services.py  urls.py  views.py
services/: admin.py  models.py  selectors.py  services.py  urls.py  views.py
users/: admin.py  managers.py  models.py  selectors.py  services.py  tests.py  urls.py  views.py
(+177 files in other folders)
